--- a/PTS-PTI-LAB/aboutus.html
+++ b/PTS-PTI-LAB/aboutus.html
@@ -175,28 +175,28 @@
             <br>
             <h4> Ainisya Beby Firstanya</h4>
             <h5>00000082271</h5>
-            <p>Halo! Saya dari kelompok UTS PTI Lab, biasa dipanggil Chacha! Dalam project UTS mata kuliah PTI Lab kali ini, kita membuat game dengan tema Game's Merchant</p>
+            <p> Halo! Saya mahasiswi Universitas Multimedia Nusantara, jurusan Informatika angkatan 2022, kelompok UTS PTI Lab, biasa dipanggil Chacha! Dalam project UTS mata kuliah PTI Lab kali ini, kita membuat game dengan tema Game's Merchant.</p>
         </div>
         <div id="anggota2">
             <img src="images/anggota2.jpg" width="10%" class="responsive">
             <br>
             <h4> Arking Luiz Davidson</h4>
             <h5>00000082483</h5>
-            <p>Halo! Saya dari kelompok UTS PTI Lab, biasa dipanggil Arking! Dalam project UTS mata kuliah PTI Lab kali ini, kita membuat game dengan tema Game's Merchant</p>
+            <p>Halo! Saya mahasiswa Universitas Multimedia Nusantara, jurusan Informatika angkatan 2022, kelompok UTS PTI Lab, biasa dipanggil Arking! Dalam project UTS mata kuliah PTI Lab kali ini, kita membuat game dengan tema Game's Merchant.</p>
         </div>
         <div id="anggota3">
             <img src="images/anggota3.jpg" width="10%" class="responsive">
             <br>
             <h4>Ghazy Athaqi Supriadi</h4>
             <h5>00000082331</h5>
-            <p>Halo! Saya dari kelompok UTS PTI Lab, biasa dipanggil Thaqi! Dalam project UTS mata kuliah PTI Lab kali ini, kita membuat game dengan tema Game's Merchant</p>
+            <p> Halo! Saya mahasiswa Universitas Multimedia Nusantara, jurusan Informatika angkatan 2022, kelompok UTS PTI Lab, biasa dipanggil Thaqi! Dalam project UTS mata kuliah PTI Lab kali ini, kita membuat game dengan tema Game's Merchant.</p>
         </div>
         <div id="anggota4">
             <img src="images/anggota4.jpg" width="10%" class="responsive">
             <br>
             <h4> Raditya Setadewa Bastian</h4>
             <h5>00000082181</h5>
-            <p>Halo! Saya dari kelompok UTS PTI Lab, biasa dipanggil Seta! Dalam project UTS mata kuliah PTI Lab kali ini, kita membuat game dengan tema Game's Merchant</p>
+            <p>Halo! Saya mahasiswa Universitas Multimedia Nusantara, jurusan Informatika angkatan 2022, kelompok UTS PTI Lab, biasa dipanggil Seta! Dalam project UTS mata kuliah PTI Lab kali ini, kita membuat game dengan tema Game's Merchant.</p>
         </div>
     </div>
 
