--- a/PTS-PTI-LAB/idleclickertest.html
+++ b/PTS-PTI-LAB/idleclickertest.html
@@ -31,8 +31,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="#">Main Game</a>
-                        <a class="nav-link" href="#">About Us</a>
+                        <a class="nav-link active" aria-current="page" href="idleclickertest">Main Game</a>
+                        <a class="nav-link" href="aboutus.html">About Us</a>
                     </div>
                 </div>
             </div>
